# rust-web

./: .env  .gitignore  Cargo.toml  README.md  REDAME.md  Rocket.toml  rust-web.http
migrations/2021-01-04-164733_rust_web/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
